# 2gamwbl

./: .gitignore  BUILD_INSTRUCTIONS.md  DECOMPILATION_LIBE6BMFQAX5V.md  DECOMPILATION_NOTES.md  PROJECT_SUMMARY.txt  README.md  TASK_COMPLETION_REPORT.md  build.gradle  gradle.properties  gradlew  settings.gradle
analysis/: all_strings.txt  analyze_libe6bmfqax5v.py  elf_dynamic.txt  elf_header.txt  elf_sections.txt  elf_symbols.txt  libe6bmfqax5v_analysis.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/bfd4ecafa7d58e39/: MainActivity.java
app/src/main/java/p00093e85d7aface4dfb/: JniBridge.java  ProxyApplication.java  ProxyComponentFactory.java  a.java  b.java  c.java
app/src/main/jni/: CMakeLists.txt  Тутвсеlib
app/src/main/jni/lib2f8c0b3257fcc345/: burri_loader.cpp
app/src/main/jni/libclient/: client.cpp  client.h
app/src/main/jni/libclient_decompiled/: .gitignore  CMakeLists.txt  DECOMPILATION_SUMMARY.md  README.md
app/src/main/jni/libclient_decompiled/docs/: ANALYSIS_REPORT.md  JNI_METHODS.md
app/src/main/jni/libclient_decompiled/include/: anti_tamper.h  client.h  constants.h  device_info.h  game_detector.h  jni_bridge.h  network_client.h  plugin_manager.h  render_engine.h  types.h
app/src/main/jni/libclient_decompiled/include/internal/: crypto_utils.h  platform_specific.h  string_utils.h
app/src/main/jni/libclient_decompiled/src/: anti_tamper.cpp  client.cpp  crypto_utils.cpp  device_info.cpp  game_detector.cpp  init.cpp  jni_interface.cpp  network_client.cpp  platform_specific.cpp  plugin_manager.cpp  render_engine.cpp  string_utils.cpp  types.cpp
app/src/main/jni/libe6bmfqax5v/: CMakeLists.txt  README.md  auxiliary.cpp  exports.map
app/src/main/jni/libe6bmfqax5v/docs/: ANALYSIS.md  API.md  README.md
app/src/main/jni/libe6bmfqax5v/include/: crypto.h  e6bmfqax5v.h  jni_interface.h  types.h  utils.h
app/src/main/jni/libe6bmfqax5v/src/: asset_crypto.cpp  crypto.cpp  crypto_cbc.cpp  crypto_hash.cpp  init.cpp  jni_interface.cpp  utils.cpp
app/src/main/jni/libmsaoaidsec/: CMakeLists.txt  README.md  exports.map  security.cpp
app/src/main/jni/libmsaoaidsec/docs/: ANALYSIS.md  API.md  SECURITY.md
app/src/main/jni/libmsaoaidsec/include/: constants.h  device_id.h  jni_interface.h  msaoaidsec.h  oaid_interface.h  security.h  types.h  utils.h
app/src/main/jni/libmsaoaidsec/src/: device_id.cpp  jni_interface.cpp  msaoaidsec.cpp  oaid_providers.cpp  security.cpp  types.cpp  utils.cpp
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-am/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-as/: strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-b+es+419/: strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en-rCA/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-en-rXC/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rUS/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-eu/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-fr-rCA/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-gu/: strings.xml
app/src/main/res/values-h360dp-land/: dimens.xml
app/src/main/res/values-h480dp-land/: dimens.xml
app/src/main/res/values-h720dp/: dimens.xml
app/src/main/res/values-hdpi/: drawables.xml  styles.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-hy/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-is/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ka/: strings.xml
app/src/main/res/values-kk/: strings.xml
app/src/main/res/values-km/: strings.xml
app/src/main/res/values-kn/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ky/: strings.xml
app/src/main/res/values-land/: dimens.xml  integers.xml  layouts.xml  styles.xml
app/src/main/res/values-large/: dimens.xml  styles.xml
app/src/main/res/values-ldrtl/: drawables.xml
app/src/main/res/values-ldrtl-hdpi/: drawables.xml
app/src/main/res/values-ldrtl-mdpi/: drawables.xml
app/src/main/res/values-ldrtl-xhdpi/: drawables.xml
app/src/main/res/values-ldrtl-xxhdpi/: drawables.xml
app/src/main/res/values-ldrtl-xxxhdpi/: drawables.xml
app/src/main/res/values-lo/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-lv/: strings.xml
app/src/main/res/values-mdpi/: drawables.xml
app/src/main/res/values-mk/: strings.xml
app/src/main/res/values-ml/: strings.xml
app/src/main/res/values-mn/: strings.xml
app/src/main/res/values-mr/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-my/: strings.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/values-ne/: strings.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-nodpi/: drawables.xml
app/src/main/res/values-or/: strings.xml
app/src/main/res/values-pa/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-port/: bools.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
(+70 files in other folders)
